Add sendRegistrationEmail handler
