# api/gen/types.gen.go
@@ -3,6 +3,10 @@
 // Code generated by github.com/deepmap/oapi-codegen version v1.16.2 DO NOT EDIT.
 package gen
 
+import (
+	openapi_types "github.com/oapi-codegen/runtime/types"
+)
+
 // Defines values for TaskStatus.
 const (
 	Done       TaskStatus = "done"
@@ -14,6 +18,12 @@ const (
 type Error struct {
 	Code    string `json:"code"`
 	Message string `json:"message"`
+}
+
+// SendRegistrationEmailRequest 会員登録用のメール送信リクエスト
+type SendRegistrationEmailRequest struct {
+	// Email 送信先のメールアドレス
+	Email openapi_types.Email `json:"email"`
 }
 
 // Task defines model for Task.
@@ -51,3 +61,6 @@ type CreateTaskJSONRequestBody CreateTaskJSONBody
 
 // UpdateTaskJSONRequestBody defines body for UpdateTask for application/json ContentType.
 type UpdateTaskJSONRequestBody UpdateTaskJSONBody
+
+// SendRegistrationEmailJSONRequestBody defines body for SendRegistrationEmail for application/json ContentType.
+type SendRegistrationEmailJSONRequestBody = SendRegistrationEmailRequest
